# Native_SDK

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.md  BUILD.rst  CMakeLists.txt  Configuration.cmake  LICENSE.txt  LICENSE_POWERVR_SDK.txt  README.md  README.rst  SDKBrowser.html  index.html  params.json
examples/: CMakeLists.txt  ExampleFunctions.cmake
examples/OpenCL/: CMakeLists.txt
examples/OpenCL/MatrixMultiplication/: CMakeLists.txt  OpenCLMatrixMultiplication.cpp  README.rst
examples/OpenGLES/: CMakeLists.txt
examples/OpenGLES/01_HelloAPI/: CMakeLists.txt  OpenGLESHelloAPI_Android.cpp  OpenGLESHelloAPI_LinuxWayland.cpp  OpenGLESHelloAPI_LinuxX11.cpp  OpenGLESHelloAPI_LinuxXCB.cpp  OpenGLESHelloAPI_NullWS.cpp  OpenGLESHelloAPI_QNXScreen.cpp  OpenGLESHelloAPI_Windows.cpp  README.rst
examples/OpenGLES/02_IntroducingPVRShell/: CMakeLists.txt  EglContext.cpp  EglContext.h  OpenGLESIntroducingPVRShell.cpp  README.rst
examples/OpenGLES/03_IntroducingPVRUtils/: CMakeLists.txt  OpenGLESIntroducingPVRUtils.cpp  README.rst  VertShader.vsh
examples/OpenGLES/04_IntroducingUIRenderer/: CMakeLists.txt  OpenGLESIntroducingUIRenderer.cpp  README.rst
examples/OpenGLES/05_IntroducingPVRCamera/: CMakeLists.txt  FragShader.fsh  OpenGLESIntroducingPVRCamera.cpp  README.rst  VertShader.vsh
examples/OpenGLES/AntiAliasing/: AttributelessVertexShader.vsh  CMakeLists.txt  FXAA_FragShader.fsh  FragShader.fsh  MSAA_FragShader.fsh  NOAA_FragShader.fsh  NOAA_VertShader.vsh  Offscreen_FragShader.fsh  OpenGLESAntiAliasing.cpp  README.rst  ResolveTXAA_FragShader.fsh  VelocityTXAA_FragShader.fsh  VelocityTXAA_VertShader.vsh  VertShader.vsh
examples/OpenGLES/BinaryShaders/: CMakeLists.txt  OpenGLESBinaryShaders.cpp
examples/OpenGLES/Bumpmap/: CMakeLists.txt  OpenGLESBumpmap.cpp  README.rst
examples/OpenGLES/DeferredShading/: AttributelessVertexShader.vsh  CMakeLists.txt  DirectionalLightFragmentShader.fsh  GBufferFloorFragmentShader.fsh  GBufferFloorVertexShader.vsh  GBufferFragmentShader.fsh  GBufferVertexShader.vsh  OpenGLESDeferredShading.cpp  PointLightPass2FragmentShader.fsh  PointLightPass2VertexShader.vsh  README.rst  WritePlsToFbo.fsh
examples/OpenGLES/GameOfLife/: CMakeLists.txt  OpenGLESGameOfLife.cpp
examples/OpenGLES/GaussianBlur/: CMakeLists.txt  OpenGLESGaussianBlur.cpp  README.rst
examples/OpenGLES/IMGFramebufferDownsample/: BlitFragShader.fsh  CMakeLists.txt  FragShader.fsh  HalfAndHalfFragShader.fsh  OpenGLESIMGFramebufferDownsample.cpp  README.rst
examples/OpenGLES/IMGTextureFilterCubic/: CMakeLists.txt  FragShader.fsh  OpenGLESIMGTextureFilterCubic.cpp  README.rst
examples/OpenGLES/ImageBasedLighting/: CMakeLists.txt  IrradianceFragShader.fsh  IrradianceVertShader.vsh  OpenGLESImageBasedLighting.cpp  PBRFragShader.fsh  PBRVertShader.vsh  PreFilterFragShader.fsh  README.rst  SkyboxFragShader.fsh  SkyboxVertShader.vsh
examples/OpenGLES/Multithreading/: CMakeLists.txt  OpenGLESMultithreading.cpp
examples/OpenGLES/MultiviewVR/: CMakeLists.txt  FragShader_ES3.fsh  OpenGLESMultiviewVR.cpp  README.rst  TexQuadFragShader_ES3.fsh  TexQuadVertShader_ES3.vsh  VertShader_ES3.vsh
examples/OpenGLES/Navigation2D/: CMakeLists.txt  FragShader.fsh  OpenGLESNavigation2D.cpp
examples/OpenGLES/Navigation3D/: AA_FragShader_ES2.fsh  AA_VertShader_ES2.vsh  CMakeLists.txt  OpenGLESNavigation3D.cpp  PlanarShadow_VertShader_ES2.vsh  README.rst
examples/OpenGLES/OpenCLExample/: CMakeLists.txt  ConvolutionKernel.cl  OpenGLESOpenCLExample.cpp  QuadFragShader_ES3.fsh  (+1 more)
examples/OpenGLSC/: CMakeLists.txt
examples/Vulkan/: CMakeLists.txt
examples/assets/: add_images.py  set_pvr_colorspace.py  tex_arm.pvr  tex_base.pvr  to_grayscale.py
examples/common/: NavDataProcess.cpp  NavDataProcess.h  NavDataProcess2D.cpp  NavDataProcess3D.cpp
framework/: CMakeLists.txt  FrameworkCommon.cmake  README.rst
framework/PVRAssets/: AssetIncludes.h  BoundingBox.h  CMakeLists.txt  Effect_2.h  Geometry.cpp  Geometry.h  Helper.cpp  Helper.h  IndexedArray.h  Model.h  PVRAssets.h  README.rst  ShaderDescription.h  ShadowVolume.cpp  ShadowVolume.h  SkipGraph.h  TextureLoad.h  TextureLoadAsync.h  Volume.cpp  Volume.h
framework/PVRCamera/: CMakeLists.txt  CameraInterface.h  CameraInterface_Android.cpp  CameraInterface_Dummy.cpp  CameraInterface_iOS.mm  PVRCamera.h  README.rst
framework/PVRCore/: CMakeLists.txt  CameraKeyFrame.h  CoreIncludes.h  DataStructures.h  Errors.h  FPSCamera.h  IAssetProvider.h  IO.h  Log.h  Maths.h  PVRCore.h  PixelFormat.h  README.rst  RefCounted.h  Stream.h  StringFunctions.h  TGAWriter.h  TPSCamera.h  Texture.h  Threading.h  Time.cpp  Time_.h  Utils.h  glm.h
framework/PVRPfx/: CMakeLists.txt  EffectVk.cpp  EffectVk.h  RenderManagerVk.cpp  RenderManagerVk.h
framework/PVRShell/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  PVRShell.h  README.rst  Shell.cpp  Shell.h  ShellData.h  ShellIncludes.h  StateMachine.cpp  StateMachine.h  Time.cpp  Time_.h
framework/PVRUtils/: ArialBoldFont.h  CMakeLists.txt  ImaginationLogo.h  MultiObject.h  PBRUtils.h  PVRUtilsGles.h  PVRUtilsGlsc.h  PVRUtilsTypes.h  PVRUtilsVk.h  PowerVRLogo.h  README.rst  StructuredMemory.h
framework/PVRVk/: AccelerationStructureVk.cpp  AccelerationStructureVk.h  ApiObjectsVk.h  BufferVk.cpp  BufferVk.h  CMakeLists.txt  CommandBufferVk.cpp  CommandBufferVk.h  CommandPoolVk.cpp  CommandPoolVk.h  CommonHelpers.h  ComputePipelineVk.h  DebugMarkerVk.cpp  DebugMarkerVk.h  DebugReportCallbackVk.cpp  DebugReportCallbackVk.h  DebugUtilsMessengerVk.cpp  DebugUtilsMessengerVk.h  DebugUtilsVk.cpp  DebugUtilsVk.h  DescriptorSetVk.cpp  DescriptorSetVk.h  DeviceMemoryVk.h  DeviceVk.cpp  DeviceVk.h  DisplayModeVk.cpp  DisplayModeVk.h  DisplayVk.cpp  DisplayVk.h  EventVk.cpp  EventVk.h  ExtensionsVk.cpp  ExtensionsVk.h  FenceVk.cpp  FenceVk.h  ForwardDecObjectsVk.h  FramebufferVk.cpp  FramebufferVk.h  GraphicsPipelineVk.h  HeadersVk.h  (+42 more)
framework/build-android/: settings.gradle
framework/scripts/: equi_to_cube.py  new_pvrvk_gen.bat  pvrvk_defaults.py  scale_or_blur_image.py  validate_pvrvk.py
(+16921 files in other folders)
